# CrackMe

Easy/src/: main.cpp
Easy/src/DllCrack/: dllmain.cpp
Hard/: CMakeLists.txt
Hard/src/: main.cpp
